# yuri

./: CMakeLists.txt  LICENSE  cc.bat  cf.bat  com.bat  run.bat
include/: Camera.hpp  Texture.hpp  ebo.hpp  shader_class.hpp  vao.hpp  vbo.hpp
include/glad/: glad.h
src/: Camera.cpp  Texture.cpp  ebo.cpp  glad.c  main.cpp  shader_class.cpp  stb_image.cpp  vao.cpp  vbo.cpp
